Fix - Main loading indicator not centered on load DCC-4438 (#73)
* add .absolute-center class for centering. related to DCC-4438

* centers loading animation. fixes DCC-4438

--- a/dcc-portal-ui/app/styles/_layout.scss
+++ b/dcc-portal-ui/app/styles/_layout.scss
@@ -155,3 +155,12 @@ section {
 .omega {
   margin-right: 0 !important;
 }
+
+.absolute-center {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
